Render all pages

--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -1,4 +1,4 @@
-<!-- -------- START FOOTER 5 w/ DARK BACKGROUND ------- -->
+<!-- START FOOTER 5 w/ DARK BACKGROUND - -->
 <footer class="footer py-5">
   <div class="container z-index-1 position-relative">
     <div class="row">
