--- a/apps/templates/includes/footer_fullscreen.html
+++ b/apps/templates/includes/footer_fullscreen.html
@@ -5,7 +5,7 @@
         <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
           Company
         </a>
-        <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
+        <a href="{{url_for('pages_about_us')}}" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
           About Us
         </a>
         <a href="javascript:;" target="_blank" class="text-secondary me-xl-5 me-3 mb-sm-0 mb-2">
