--- a/apps/templates/sections/input-areas/inputs.html
+++ b/apps/templates/sections/input-areas/inputs.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/base_background.html' %}
-{% load static %}
+
 
 {% block title %} Material Kit 2 by Creative Tim {% endblock title %}
 {% block body %} class="inputs-sections" {% endblock body %}
@@ -69,8 +69,8 @@
   </div>
 </section>
 
-        <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/popper.min.js' )}}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/bootstrap.min.js' )}}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
         '></iframe>
             </div>
@@ -140,8 +140,8 @@
   </div>
 </section>
 
-        <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/popper.min.js' )}}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/bootstrap.min.js' )}}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
         '></iframe>
             </div>
@@ -210,8 +210,8 @@
   </div>
 </section>
 
-        <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/popper.min.js' )}}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/bootstrap.min.js' )}}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
         '></iframe>
             </div>
@@ -281,8 +281,8 @@
   </div>
 </section>
 
-        <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/popper.min.js' )}}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/bootstrap.min.js' )}}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
         '></iframe>
             </div>
@@ -349,8 +349,8 @@
   </div>
 </section>
 
-        <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/popper.min.js' )}}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/bootstrap.min.js' )}}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
         '></iframe>
             </div>
@@ -414,8 +414,8 @@
   </div>
 </section>
 
-        <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/popper.min.js' )}}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/bootstrap.min.js' )}}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
         '></iframe>
             </div>
@@ -479,8 +479,8 @@
   </div>
 </section>
 
-        <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/popper.min.js' )}}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/bootstrap.min.js' )}}" type="text/javascript"></script>
         <script src="https://demos.creative-tim.com/material-kit/assets/js/material-kit.min.js?v=3.0.4" type="text/javascript"></script>
         '></iframe>
             </div>
