--- a/apps/templates/accounts/password_change.html
+++ b/apps/templates/accounts/password_change.html
@@ -41,19 +41,14 @@
             </div>
             <div class="card-body">
               <form role="form" method="post" action="#" class="text-start">
-                {% if form.non_field_errors %}
-                  {% for error in form.non_field_errors %}
-                  <small>{{ error }}</small>
-                  {% endfor %}
-                {% endif %}
-                {% csrf_token %}
-                {% for field in form %}
-                  <div class="input-group input-group-outline my-3">
-                    <label class="form-label">{{ field.label }}</label>
-                    {{field}}
-                  </div>
-                  <small>{{ field.errors }}</small>
-                {% endfor %}
+                <div class="input-group input-group-outline mb-3">
+                  <label class="form-label">Password</label>
+                  <input type="password" class="form-control">
+                </div>
+                <div class="input-group input-group-outline mb-3">
+                  <label class="form-label">Confirm Password</label>
+                  <input type="password" class="form-control">
+                </div>
                 <div class="text-center">
                   <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Change</button>
                 </div>
