--- a/apps/templates/accounts/sign-in.html
+++ b/apps/templates/accounts/sign-in.html
@@ -40,32 +40,25 @@
               </div>
             </div>
             <div class="card-body">
-              <form role="form" method="post" action="#" class="text-start">
-                {% if form.non_field_errors %}
-                  {% for error in form.non_field_errors %}
-                  <small>{{ error }}</small>
-                  {% endfor %}
-                {% endif %}
-                {% csrf_token %}
-                {% for field in form %}
-                  <div class="input-group input-group-outline my-3">
-                    <label class="form-label">{{ field.label }}</label>
-                    {{field}}
-                  </div>
-                  <small>{{ field.errors }}</small>
-                {% endfor %}
+              <form role="form" class="text-start">
+                <div class="input-group input-group-outline my-3">
+                  <label class="form-label">Email</label>
+                  <input type="email" class="form-control">
+                </div>
+                <div class="input-group input-group-outline mb-3">
+                  <label class="form-label">Password</label>
+                  <input type="password" class="form-control">
+                </div>
                 <div class="form-check form-switch d-flex align-items-center mb-3">
                   <input class="form-check-input" type="checkbox" id="rememberMe" checked>
                   <label class="form-check-label mb-0 ms-3" for="rememberMe">Remember me</label>
                 </div>
-                <a href="{% url 'password_reset' %}" class="mt-4 text-sm">
-                  Forgot Password?
-                </a>
                 <div class="text-center">
-                  <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign in</button>
+                  <button type="button" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign in</button>
                 </div>
                 <p class="mt-4 text-sm text-center">
-                  Don't have an account? <a href="{% url 'register' %}" class="text-primary">Sign UP</a>
+                  Don't have an account?
+                  <a href="{{url_for('accounts_sign_up')}}" class="text-dark font-weight-bolder">Sign up</a>
                 </p>
               </form>
             </div>
