--- a/apps/templates/accounts/sign-up.html
+++ b/apps/templates/accounts/sign-up.html
@@ -40,21 +40,26 @@
               </div>
             </div>
             <div class="card-body">
-              <form role="form" method="post" action="#" class="text-start">
-                {% csrf_token %}
-                {% for field in form %}
-                  <div class="input-group input-group-outline my-3">
-                    <label class="form-label">{{ field.label }}</label>
-                    {{field}}
-                  </div>
-                  <small>{{ field.errors }}</small>
-                {% endfor %}
-                <div class="text-center">
-                  <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign Up</button>
+              <form role="form">
+                <div class="mb-3">
+                  <input type="text" class="form-control" placeholder="Name" aria-label="Name">
                 </div>
-                <p class="mt-4 text-sm text-center">
-                  Have an account? <a href="{% url 'login' %}" class="text-primary">Sign IN</a> 
-                </p>
+                <div class="mb-3">
+                  <input type="email" class="form-control" placeholder="Email" aria-label="Email">
+                </div>
+                <div class="mb-3">
+                  <input type="password" class="form-control" placeholder="Password" aria-label="Password">
+                </div>
+                <div class="form-check form-check-info text-start">
+                  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
+                  <label class="form-check-label" for="flexCheckDefault">
+                    I agree the <a href="javascript:;" class="text-dark font-weight-bolder">Terms and Conditions</a>
+                  </label>
+                </div>
+                <div class="text-center">
+                  <button type="button" class="btn bg-gradient-dark w-100 my-4 mb-2">Sign up</button>
+                </div>
+                <p class="text-sm mt-3 mb-0">Already have an account? <a href="{{url_for('accounts_sign_in')}}" class="text-dark font-weight-bolder">Sign in</a></p>
               </form>
             </div>
           </div>
