--- a/apps/templates/includes/scripts_sections.html
+++ b/apps/templates/includes/scripts_sections.html
@@ -1,4 +1,2 @@
-{% load static %}
-
-<script src="{% static 'js/plugins/prism.min.js' %}"></script>
-<script src="{% static 'js/plugins/highlight.min.js' %}"></script>
+<script src="{{ url_for('static', filename = 'assets/js/plugins/prism.min.js' )}}"></script>
+<script src="{{ url_for('static', filename = 'assets/js/plugins/highlight.min.js' )}}"></script>
