--- a/apps/templates/pages/about-us.html
+++ b/apps/templates/pages/about-us.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/base_background.html' %}
-{% load static %}
+
 
 {% block title %} Material Kit 2 by Creative Tim {% endblock title %}
 {% block body %} class="about-us bg-gray-200" {% endblock body %}
@@ -14,7 +14,7 @@
 
   <!-- -------- START HEADER 7 w/ text and video ------- -->
   <header class="bg-gradient-dark">
-    <div class="page-header min-vh-75" style="background-image: url('{% static 'img/bg9.jpg' %}');">
+    <div class="page-header min-vh-75" style="background-image: url('{{ url_for('static', filename = 'assets/img/bg9.jpg' )}}');">
       <span class="mask bg-gradient-dark opacity-6"></span>
       <div class="container">
         <div class="row justify-content-center">
@@ -112,7 +112,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="javascript:;">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'img/team-5.jpg' %}" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{{ url_for('static', filename = 'assets/img/team-5.jpg' )}}" alt="image">
                     </div>
                   </a>
                 </div>
@@ -132,7 +132,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="javascript:;">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'img/bruce-mars.jpg' %}" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{{ url_for('static', filename = 'assets/img/bruce-mars.jpg' )}}" alt="image">
                     </div>
                   </a>
                 </div>
@@ -154,7 +154,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="javascript:;">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'img/ivana-squares.jpg' %}" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{{ url_for('static', filename = 'assets/img/ivana-squares.jpg' )}}" alt="image">
                     </div>
                   </a>
                 </div>
@@ -174,7 +174,7 @@
                 <div class="col-lg-4 col-md-6 col-12 mt-n5">
                   <a href="javascript:;">
                     <div class="p-3 pe-md-0">
-                      <img class="w-100 border-radius-md shadow-lg" src="{% static 'img/ivana-square.jpg' %}" alt="image">
+                      <img class="w-100 border-radius-md shadow-lg" src="{{ url_for('static', filename = 'assets/img/ivana-square.jpg' )}}" alt="image">
                     </div>
                   </a>
                 </div>
@@ -196,22 +196,22 @@
       <div class="container">
         <div class="row mb-7">
           <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="{% static 'img/logos/gray-logos/logo-coinbase.svg' %}" alt="logo">
+            <img class="w-100 opacity-7" src="{{ url_for('static', filename = 'assets/img/logos/gray-logos/logo-coinbase.svg' )}}" alt="logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="{% static 'img/logos/gray-logos/logo-nasa.svg' %}" alt="logo">
+            <img class="w-100 opacity-7" src="{{ url_for('static', filename = 'assets/img/logos/gray-logos/logo-nasa.svg' )}}" alt="logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="{% static 'img/logos/gray-logos/logo-netflix.svg' %}" alt="logo">
+            <img class="w-100 opacity-7" src="{{ url_for('static', filename = 'assets/img/logos/gray-logos/logo-netflix.svg' )}}" alt="logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="{% static 'img/logos/gray-logos/logo-pinterest.svg' %}" alt="logo">
+            <img class="w-100 opacity-7" src="{{ url_for('static', filename = 'assets/img/logos/gray-logos/logo-pinterest.svg' )}}" alt="logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="{% static 'img/logos/gray-logos/logo-spotify.svg' %}" alt="logo">
+            <img class="w-100 opacity-7" src="{{ url_for('static', filename = 'assets/img/logos/gray-logos/logo-spotify.svg' )}}" alt="logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 mb-4">
-            <img class="w-100 opacity-7" src="{% static 'img/logos/gray-logos/logo-vodafone.svg' %}" alt="logo">
+            <img class="w-100 opacity-7" src="{{ url_for('static', filename = 'assets/img/logos/gray-logos/logo-vodafone.svg' )}}" alt="logo">
           </div>
         </div>
         <div class="row justify-content-center text-center">
@@ -257,7 +257,7 @@
           </div>
           <div class="col-md-5 ms-auto">
             <div class="position-relative">
-              <img class="max-width-50 w-100 position-relative z-index-2" src="{% static 'img/macbook.png' %}" alt="image">
+              <img class="max-width-50 w-100 position-relative z-index-2" src="{{ url_for('static', filename = 'assets/img/macbook.png' )}}" alt="image">
             </div>
           </div>
         </div>
@@ -270,7 +270,7 @@
   {% block javascrips %}
   
     <!--  Plugin for TypedJS, full documentation here: https://github.com/inorganik/CountUp.js -->
-    <script src="{% static 'js/plugins/countup.min.js' %}"></script>
+    <script src="{{ url_for('static', filename = 'assets/js/plugins/countup.min.js' )}}"></script>
 
     <script>
       // get the element to animate
