--- a/apps/templates/pages/author.html
+++ b/apps/templates/pages/author.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/base_background.html' %}
-{% load static %}
+
 
 {% block title %} Material Kit 2 by Creative Tim {% endblock title %}
 {% block body %} class="blog-author bg-gray-200" {% endblock body %}
@@ -14,7 +14,7 @@
 
   <!-- -------- START HEADER 4 w/ search book a ticket form ------- -->
   <header>
-    <div class="page-header min-height-400" style="background-image: url('{% static 'img/city-profile.jpg' %}');" loading="lazy">
+    <div class="page-header min-height-400" style="background-image: url('{{ url_for('static', filename = 'assets/img/city-profile.jpg' )}}');" loading="lazy">
       <span class="mask bg-gradient-dark opacity-8"></span>
     </div>
   </header>
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="col-12 mx-auto">
             <div class="mt-n8 mt-md-n9 text-center">
-              <img class="avatar avatar-xxl shadow-xl position-relative z-index-2" src="{% static 'img/bruce-mars.jpg' %}" alt="bruce" loading="lazy">
+              <img class="avatar avatar-xxl shadow-xl position-relative z-index-2" src="{{ url_for('static', filename = 'assets/img/bruce-mars.jpg' )}}" alt="bruce" loading="lazy">
             </div>
             <div class="row py-5">
               <div class="col-lg-7 col-md-7 z-index-2 position-relative px-md-2 px-sm-5 mx-auto">
@@ -79,7 +79,7 @@
             <div class="card card-plain">
               <div class="card-header p-0 position-relative">
                 <a class="d-block blur-shadow-image">
-                  <img src="{% static 'img/examples/testimonial-6-2.jpg' %}" alt="img-blur-shadow" class="img-fluid shadow border-radius-lg" loading="lazy">
+                  <img src="{{ url_for('static', filename = 'assets/img/examples/testimonial-6-2.jpg' )}}" alt="img-blur-shadow" class="img-fluid shadow border-radius-lg" loading="lazy">
                 </a>
               </div>
               <div class="card-body px-0">
@@ -100,7 +100,7 @@
             <div class="card card-plain">
               <div class="card-header p-0 position-relative">
                 <a class="d-block blur-shadow-image">
-                  <img src="{% static 'img/examples/testimonial-6-3.jpg' %}" alt="img-blur-shadow" class="img-fluid shadow border-radius-lg" loading="lazy">
+                  <img src="{{ url_for('static', filename = 'assets/img/examples/testimonial-6-3.jpg' )}}" alt="img-blur-shadow" class="img-fluid shadow border-radius-lg" loading="lazy">
                 </a>
               </div>
               <div class="card-body px-0">
@@ -121,7 +121,7 @@
             <div class="card card-plain">
               <div class="card-header p-0 position-relative">
                 <a class="d-block blur-shadow-image">
-                  <img src="{% static 'img/examples/blog-9-4.jpg' %}" alt="img-blur-shadow" class="img-fluid shadow border-radius-lg" loading="lazy">
+                  <img src="{{ url_for('static', filename = 'assets/img/examples/blog-9-4.jpg' )}}" alt="img-blur-shadow" class="img-fluid shadow border-radius-lg" loading="lazy">
                 </a>
               </div>
               <div class="card-body px-0">
@@ -140,7 +140,7 @@
           </div>
           <div class="col-lg-3 col-md-12 col-12">
             <div class="card card-blog card-background cursor-pointer">
-              <div class="full-background" style="background-image: url('{% static 'img/examples/blog2.jpg' %}')" loading="lazy"></div>
+              <div class="full-background" style="background-image: url('{{ url_for('static', filename = 'assets/img/examples/blog2.jpg' )}}')" loading="lazy"></div>
               <div class="card-body">
                 <div class="content-left text-start my-auto py-4">
                   <h2 class="card-title text-white">Flexible work hours</h2>
@@ -163,7 +163,7 @@
         <div class="col">
           <div class="card box-shadow-xl overflow-hidden mb-5">
             <div class="row">
-              <div class="col-lg-5 position-relative bg-cover px-0" style="background-image: url('{% static 'img/examples/blog2.jpg' %}')" loading="lazy">
+              <div class="col-lg-5 position-relative bg-cover px-0" style="background-image: url('{{ url_for('static', filename = 'assets/img/examples/blog2.jpg' )}}')" loading="lazy">
                 <div class="z-index-2 text-center d-flex h-100 w-100 d-flex m-auto justify-content-center">
                   <div class="mask bg-gradient-dark opacity-8"></div>
                   <div class="p-5 ps-sm-8 position-relative text-start my-auto z-index-2">
