--- a/apps/templates/pages/presentation.html
+++ b/apps/templates/pages/presentation.html
@@ -1,7 +1,5 @@
 {% extends 'layouts/base_background.html' %}
 
-{% load static %}
-
 {% block title %} Material Kit 2 by Creative Tim {% endblock title %}
 
 {% block body %} class="presentation-page bg-gray-200" {% endblock body %}
@@ -9,7 +7,7 @@
 {% block content %}
 
   <header class="header-2">
-    <div class="page-header min-vh-75 relative" style="background-image: url('{% static 'img/bg2.jpg' %}')">
+    <div class="page-header min-vh-75 relative" style="background-image: url('{{ url_for('static', filename = 'assets/img/bg2.jpg' )}}')">
       <span class="mask bg-gradient-primary opacity-4"></span>
       <div class="container">
         <div class="row">
@@ -72,7 +70,7 @@
                   <div class="card-body pt-7 text-center">
                     <h3 class="text-white">Discover More</h3>
                     <p class="text-white opacity-8"> You will save a lot of time going from prototyping to full-functional code because all elements are implemented.</p>
-                    <a href="{% url 'page_header' %}" target="_blank" class="btn btn-white btn-sm w-50 mx-auto mt-3">Start with Headers</a>
+                    <a href="#" target="_blank" class="btn btn-white btn-sm w-50 mx-auto mt-3">Start with Headers</a>
                   </div>
                 </div>
               </div>
@@ -136,7 +134,7 @@
           <div class="col-lg-9">
             <div class="row">
               <div class="col-md-4 mt-md-0">
-                <a href="{% url 'page_header' %}">
+                <a href="{{url_for('sections_page_sections_hero_sections')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/headers.jpg" alt="hero">
                   </div>
@@ -147,7 +145,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="{% url 'features' %}">
+                <a href="{{url_for('sections_page_sections_features')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/features.jpg" alt="features">
                   </div>
@@ -430,7 +428,7 @@
           <div class="col-lg-9">
             <div class="row mt-3">
               <div class="col-md-4">
-                <a href="{% url 'navbar' %}">
+                <a href="{{url_for('sections_navigation_navbars')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 m-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/navbars.jpg" alt="navbars">
                   </div>
@@ -441,7 +439,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="{% url 'nav_tabs' %}">
+                <a href="{{url_for('sections_navigation_nav_tabs')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 m-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/nav-tabs.jpg" alt="navtabs">
                   </div>
@@ -452,7 +450,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="{% url 'pagination' %}">
+                <a href="{{url_for('sections_navigation_pagination')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 m-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/pagination.jpg" alt="pagination">
                   </div>
@@ -517,7 +515,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="{% url 'forms' %}">
+                <a href="{{url_for('sections_input_areas_forms')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 m-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/forms.jpg" alt="forms">
                   </div>
@@ -530,7 +528,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-md-4">
-                <a href="{% url 'inputs' %}">
+                <a href="{{url_for('sections_input_areas_inputs')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/inputs.jpg" alt="inputs">
                   </div>
@@ -553,7 +551,7 @@
           <div class="col-lg-9">
             <div class="row mt-3">
               <div class="col-md-4">
-                <a href="{% url 'alerts' %}">
+                <a href="{{url_for('sections_attention_catchers_alerts')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/alerts.jpg" alt="alerts">
                   </div>
@@ -585,7 +583,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="{% url 'tooltips' %}">
+                <a href="{{url_for('sections_attention_catchers_tooltips_popovers')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/popovers.jpg" alt="tooltip_popover">
                   </div>
@@ -598,7 +596,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-md-4 mt-md-0 mt-3">
-                <a href="{% url 'modals' %}">
+                <a href="{{url_for('sections_attention_catchers_modals')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/modals.jpg" alt="modals">
                   </div>
@@ -621,7 +619,7 @@
           <div class="col-lg-9">
             <div class="row mt-3">
               <div class="col-md-4">
-                <a href="{% url 'buttons' %}">
+                <a href="{{url_for('sections_elements_buttons')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/buttons.jpg" alt="buttons">
                   </div>
@@ -632,7 +630,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="{% url 'avatars' %}">
+                <a href="{{url_for('sections_elements_avatars')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/avatars.jpg" alt="avatars">
                   </div>
@@ -643,7 +641,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="{% url 'dropdowns' %}">
+                <a href="{{url_for('sections_elements_dropdowns')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/dropdowns.jpg" alt="dropdowns">
                   </div>
@@ -656,7 +654,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-md-4">
-                <a href="{% url 'toggles' %}">
+                <a href="{{url_for('sections_elements_toggles')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/switch.jpg" alt="toggles">
                   </div>
@@ -711,7 +709,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-md-4 mt-md-0 mt-3">
-                <a href="{% url 'breadcrumbs' %}">
+                <a href="{{url_for('sections_elements_breadcrumbs')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/breadcrumbs.jpg" alt="breadcrumbs">
                   </div>
@@ -722,7 +720,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="{% url 'badges' %}">
+                <a href="{{url_for('sections_elements_badges')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/badges.jpg" alt="badges">
                   </div>
@@ -733,7 +731,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="{% url 'progress_bars' %}">
+                <a href="{{url_for('sections_elements_progress_bars')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/progress.jpg" alt="progress">
                   </div>
@@ -767,7 +765,7 @@
                 </a>
               </div>
               <div class="col-md-4 mt-md-0 mt-4">
-                <a href="{% url 'typography' %}">
+                <a href="{{url_for('sections_elements_typography')}}">
                   <div class="card shadow-lg move-on-hover min-height-160 min-height-160">
                     <img class="w-100 my-auto" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/presentation/sections/typography.jpg" alt="typography">
                   </div>
@@ -799,7 +797,7 @@
           <div class="col-md-8">
             <div class="row mt-4">
               <div class="col-md-6">
-                <a href="{% url 'about-us' %}">
+                <a href="{{url_for('pages_about_us')}}">
                   <div class="card move-on-hover">
                     <img class="w-100" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/assets/img/about-us.jpg" alt="aboutus">
                   </div>
@@ -809,7 +807,7 @@
                 </a>
               </div>
               <div class="col-md-6 mt-md-0 mt-5">
-                <a href="{% url 'contact-us' %}">
+                <a href="{{url_for('pages_contact_us')}}">
                   <div class="card move-on-hover">
                     <img class="w-100" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/assets/img/contact-us.jpg" alt="contacus">
                   </div>
@@ -819,7 +817,7 @@
                 </a>
               </div>
               <div class="col-md-6 mt-md-3 mt-6">
-                <a href="{% url 'login' %}">
+                <a href="{{url_for('accounts_sign_in')}}">
                   <div class="card move-on-hover">
                     <img class="w-100" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/assets/img/sign-in.jpg" alt="signin">
                   </div>
@@ -829,7 +827,7 @@
                 </a>
               </div>
               <div class="col-md-6 mt-md-3 mt-6">
-                <a href="{% url 'author' %}">
+                <a href="{{url_for('pages_author')}}">
                   <div class="card move-on-hover">
                     <img class="w-100" src="https://raw.githubusercontent.com/creativetimofficial/public-assets/master/material-design-system/assets/img/author.jpg" alt="author">
                   </div>
@@ -991,26 +989,26 @@
         <hr class="horizontal dark my-5">
         <div class="row">
           <div class="col-lg-2 col-md-4 col-6 ms-auto">
-            <img class="w-100 opacity-6" src="{% static 'img/logos/gray-logos/logo-apple.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{{ url_for('static', filename = 'assets/img/logos/gray-logos/logo-apple.svg' )}}" alt="Logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6">
-            <img class="w-100 opacity-6" src="{% static 'img/logos/gray-logos/logo-facebook.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{{ url_for('static', filename = 'assets/img/logos/gray-logos/logo-facebook.svg' )}}" alt="Logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6">
-            <img class="w-100 opacity-6" src="{% static 'img/logos/gray-logos/logo-nasa.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{{ url_for('static', filename = 'assets/img/logos/gray-logos/logo-nasa.svg' )}}" alt="Logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 ms-lg-0 ms-md-auto">
-            <img class="w-100 opacity-6" src="{% static 'img/logos/gray-logos/logo-vodafone.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{{ url_for('static', filename = 'assets/img/logos/gray-logos/logo-vodafone.svg' )}}" alt="Logo">
           </div>
           <div class="col-lg-2 col-md-4 col-6 me-md-auto mx-md-0 mx-auto">
-            <img class="w-100 opacity-6" src="{% static 'img/logos/gray-logos/logo-digitalocean.svg' %}" alt="Logo">
+            <img class="w-100 opacity-6" src="{{ url_for('static', filename = 'assets/img/logos/gray-logos/logo-digitalocean.svg' )}}" alt="Logo">
           </div>
         </div>
       </div>
     </section>
     <section class="py-sm-7" id="download-soft-ui">
       <div class="bg-gradient-dark position-relative m-3 border-radius-xl overflow-hidden">
-        <img src="{% static 'img/shapes/waves-white.svg' %}" alt="pattern-lines" class="position-absolute start-0 top-md-0 w-100 opacity-2">
+        <img src="{{ url_for('static', filename = 'assets/img/shapes/waves-white.svg' )}}" alt="pattern-lines" class="position-absolute start-0 top-md-0 w-100 opacity-2">
         <div class="container py-7 postion-relative z-index-2 position-relative">
           <div class="row">
             <div class="col-md-7 mx-auto text-center">
@@ -1118,16 +1116,16 @@
 {% block javascripts %}
 
 <!--  Plugin for TypedJS, full documentation here: https://github.com/inorganik/CountUp.js -->
-<script src="{% static 'js/plugins/countup.min.js' %}"></script>
-<script src="{% static 'js/plugins/choices.min.js' %}"></script>
-<script src="{% static 'js/plugins/prism.min.js' %}"></script>
-<script src="{% static 'js/plugins/highlight.min.js' %}"></script>
+<script src="{{ url_for('static', filename = 'assets/js/plugins/countup.min.js' )}}"></script>
+<script src="{{ url_for('static', filename = 'assets/js/plugins/choices.min.js' )}}"></script>
+<script src="{{ url_for('static', filename = 'assets/js/plugins/prism.min.js' )}}"></script>
+<script src="{{ url_for('static', filename = 'assets/js/plugins/highlight.min.js' )}}"></script>
 <!--  Plugin for Parallax, full documentation here: https://github.com/dixonandmoe/rellax -->
-<script src="{% static 'js/plugins/rellax.min.js' %}"></script>
+<script src="{{ url_for('static', filename = 'assets/js/plugins/rellax.min.js' )}}"></script>
 <!--  Plugin for TiltJS, full documentation here: https://gijsroge.github.io/tilt.js/ -->
-<script src="{% static 'js/plugins/tilt.min.js' %}"></script>
+<script src="{{ url_for('static', filename = 'assets/js/plugins/tilt.min.js' )}}"></script>
 <!--  Plugin for Selectpicker - ChoicesJS, full documentation here: https://github.com/jshjohnson/Choices -->
-<script src="{% static 'js/plugins/choices.min.js' %}"></script>
+<script src="{{ url_for('static', filename = 'assets/js/plugins/choices.min.js' )}}"></script>
 
 
 <script type="text/javascript">
