--- a/apps/templates/sections/elements/badges.html
+++ b/apps/templates/sections/elements/badges.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/base_background.html' %}
-{% load static %}
+
 
 {% block title %} Material Kit 2 by Creative Tim {% endblock title %}
 {% block body %} class="badges-sections" {% endblock body %}
@@ -73,8 +73,8 @@
   </div>
 </section>
 
-        <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/popper.min.js' )}}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/bootstrap.min.js' )}}" type="text/javascript"></script>
         '></iframe>
             </div>
             <div class="tab-pane" id="code-badges">
@@ -150,8 +150,8 @@
   </div>
 </section>
 
-        <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/popper.min.js' )}}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/bootstrap.min.js' )}}" type="text/javascript"></script>
         '></iframe>
             </div>
             <div class="tab-pane" id="code-badges-simple">
@@ -227,8 +227,8 @@
   </div>
 </section>
 
-        <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/popper.min.js' )}}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/bootstrap.min.js' )}}" type="text/javascript"></script>
         '></iframe>
             </div>
             <div class="tab-pane" id="code-badges-simple-rounded">
