--- a/apps/templates/sections/elements/dropdowns.html
+++ b/apps/templates/sections/elements/dropdowns.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/base_background.html' %}
-{% load static %}
+
 
 {% block title %} Material Kit 2 by Creative Tim {% endblock title %}
 {% block body %} class="dropdowns-sections" {% endblock body %}
@@ -105,8 +105,8 @@
 </div>
 <!--   end dropdowns & dropups -->
 
-        <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/popper.min.js' )}}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/bootstrap.min.js' )}}" type="text/javascript"></script>
         <link id="pagestyle" href="https://demos.creative-tim.com/material-kit/assets/css/material-kit.min.css?v=3.0.4" rel="stylesheet" />
 
         '></iframe>
