--- a/apps/templates/sections/navigation/navbars.html
+++ b/apps/templates/sections/navigation/navbars.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/base_background.html' %}
-{% load static %}
+
 
 {% block title %} Material Kit 2 by Creative Tim {% endblock title %}
 {% block body %} class="nav-tabs-sections" {% endblock body %}
@@ -77,27 +77,27 @@
         <li class="nav-item mx-2">
           <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" role="button">
             Pages
-            <img src="{% static 'img/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-1">
+            <img src="{{ url_for('static', filename = 'assets/img/down-arrow-white.svg' )}}" alt="down-arrow" class="arrow ms-1">
           </a>
         </li>
 
         <li class="nav-item mx-2">
           <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" role="button">
             Account
-            <img src="{% static 'img/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-1">
+            <img src="{{ url_for('static', filename = 'assets/img/down-arrow-white.svg' )}}" alt="down-arrow" class="arrow ms-1">
           </a>
         </li>
         <li class="nav-item mx-2">
           <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" role="button">
             Blocks
-            <img src="{% static 'img/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-1">
+            <img src="{{ url_for('static', filename = 'assets/img/down-arrow-white.svg' )}}" alt="down-arrow" class="arrow ms-1">
           </a>
         </li>
 
         <li class="nav-item dropdown dropdown-hover mx-2">
           <a class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" role="button">
             Docs
-            <img src="{% static 'img/down-arrow-white.svg' %}" alt="down-arrow" class="arrow ms-1">
+            <img src="{{ url_for('static', filename = 'assets/img/down-arrow-white.svg' )}}" alt="down-arrow" class="arrow ms-1">
           </a>
         </li>
       </ul>
@@ -113,8 +113,8 @@
 <!-- End Navbar -->
 
 
-        <script src="{% static 'js/core/popper.min.js' %}" type="text/javascript"></script>
-        <script src="{% static 'js/core/bootstrap.min.js' %}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/popper.min.js' )}}" type="text/javascript"></script>
+        <script src="{{ url_for('static', filename = 'assets/js/core/bootstrap.min.js' )}}" type="text/javascript"></script>
         '></iframe>
             </div>
             <div class="tab-pane" id="code-navbar-dark">
@@ -141,27 +141,27 @@
         <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"nav-item mx-2"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center"</span> <span class="na">role=</span><span class="s">"button"</span><span class="nt">&gt;</span>
             Pages
-            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{% static 'img/down-arrow-white.svg' %}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
+            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{{ url_for('static', filename = 'assets/img/down-arrow-white.svg' )}}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;/a&gt;</span>
         <span class="nt">&lt;/li&gt;</span>
 
         <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"nav-item mx-2"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center"</span> <span class="na">role=</span><span class="s">"button"</span><span class="nt">&gt;</span>
             Account
-            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{% static 'img/down-arrow-white.svg' %}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
+            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{{ url_for('static', filename = 'assets/img/down-arrow-white.svg' )}}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;/a&gt;</span>
         <span class="nt">&lt;/li&gt;</span>
         <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"nav-item mx-2"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center"</span> <span class="na">role=</span><span class="s">"button"</span><span class="nt">&gt;</span>
             Blocks
-            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{% static 'img/down-arrow-white.svg' %}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
+            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{{ url_for('static', filename = 'assets/img/down-arrow-white.svg' )}}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;/a&gt;</span>
         <span class="nt">&lt;/li&gt;</span>
 
         <span class="nt">&lt;li</span> <span class="na">class=</span><span class="s">"nav-item dropdown dropdown-hover mx-2"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center"</span> <span class="na">role=</span><span class="s">"button"</span><span class="nt">&gt;</span>
             Docs
-            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{% static 'img/down-arrow-white.svg' %}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
+            <span class="nt">&lt;img</span> <span class="na">src=</span><span class="s">"{{ url_for('static', filename = 'assets/img/down-arrow-white.svg' )}}"</span> <span class="na">alt=</span><span class="s">"down-arrow"</span> <span class="na">class=</span><span class="s">"arrow ms-1"</span><span class="nt">&gt;</span>
           <span class="nt">&lt;/a&gt;</span>
         <span class="nt">&lt;/li&gt;</span>
       <span class="nt">&lt;/ul&gt;</span>
